Refactor a bit to limit complexity (indentation)