@@ -15,6 +15,7 @@ import java.net.URLEncoder;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
+import java.nio.charset.StandardCharsets;
 import java.util.Optional;
 import org.folio.config.SamlConfigHolder;
 import org.folio.rest.RestVerticle;
@@ -416,7 +417,7 @@ public class SamlAPITest {
       .post("/saml/callback")
       .then()
       .statusCode(302)
-      .header("Location", containsString(URLEncoder.encode(testPath, "UTF-8")))
+      .header("Location", containsString(URLEncoder.encode(testPath, StandardCharsets.UTF_8)))
       .header("x-okapi-token", "saml-token")
       .cookie("ssoToken", "saml-token");
 
